tests/__snapshots__/validation-fixtureFileMatch-wrong-option-value-type-stderr.snap.txt
Error: Option 'fixtureFileMatch' requires a value of type list.

  1 | {
  2 |   "fixtureFileMatch": "fixtures",
    |                       ~~~~~~~~~~
  3 |   "failFast": true
  4 | }
  5 | 

      at ./tstyche.config.json:2:23

